# ibc

./: .gitattributes  pyproject.toml
datos/: NoMontyHall.csv  alturas.csv  positivos_por_tests.csv
src/ibc/: __init__.py  ej2.py  ej4.py  practica1.py  solucion_parcial_ejercicio_1.py
src/ibc/TTT/: Evento.py  Gaussiana.py  Historia.py  Main.py
src/ibc/practica1/: ej3.py  old_solucion_ej1_9.py  solucion_parcial_ejercicio_1.py
src/ibc/practica2/: ej2.py  ej3.py  ej3_5.py  ej3_5_2.py
src/ibc/practica4/: ej1.py  ej4.py
