[project]
name = "ibc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.0",
    "matplotlib>=3.9.2",
    "pandas>=2.2.2",
    "statsmodels>=0.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
